UI Fix in Dark Mode

--- a/src/components/ProductCatalog/ProductCatalog.css
+++ b/src/components/ProductCatalog/ProductCatalog.css
@@ -41,7 +41,6 @@
 .card-body p {
   max-width: 300px;
   max-height: 40px;
-  margin-bottom: 20px;
   font-size: 14px;
 }
 
